--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "moment": "^2.17.1",
     "ng2-charts": "^1.5.0",
+    "ng2draggable": "^1.2.7",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.4"
