--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^2.4.0",
     "core-js": "^2.4.1",
     "moment": "^2.17.1",
+    "moment-precise-range-plugin": "^1.2.1",
     "ng2-charts": "^1.5.0",
     "ng2draggable": "^1.2.7",
     "rxjs": "^5.0.1",
